More coding, lots of them still doesn't work. Must copy tap counter to it.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CountDown"
+            android:label="Countdown">
+            </activity>
+
+        <activity
+            android:name=".Game"
+            android:label="Game">
+            </activity>
     </application>
 
 </manifest>
